Fix typewriter mobile issue: On small screen typewriter was overwriting text. This was because line-height was set to 0. Removing that setting caused the issue that the page height changes again and again. To solve it, add a starting fixed character '>' to the typewriter text. The issue (page height) still remains on mobile view.

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,10 @@ body {
 #home-page-container {
   position: relative;
   display: flex;
-  border: 0.8vh solid red;
+  border-top: 0.8vh solid red;
+  border-right: 0.8vh solid green;
+  border-bottom: 0.8vh solid blue;
+  border-left: 0.8vh solid white;
   max-width: 55em;
   padding: 0rem 6em;
   /* align-items: center; */
@@ -63,7 +66,7 @@ body {
   margin-top: 0;
   margin-bottom: 0;
   /* padding: 0; */
-  line-height: 0;
+  /* line-height: 0; */
   /* margin-bottom: 0; */
   min-height: 3rem;
   /* display: fixed; */
